/* LiteSQL - Documentation - Changes
 * 
 * By Tero Laitinen 
 * 
 * See LICENSE for copyright information. */

/* \file changes.txt
    Manual */
/** \page changes Changes
\section vercvs CVS Version
2006 January 14:
- bug fix: litesql-gen did not sort objects of relation tags and this resulted to broken relation table names

2006 January 3:
- bug fix: litesql-gen writes explicit template parameters for make_pair now (gcc 2.96 requires it)

2005 December 25:
- bug fix: all backend transaction routines leaked some memory (fixed by Michel Loiseleur)
- bug fix: litesql-gen crashed when XML file had undefined objects inside relation tag
- litesql-config utility and pkg-config support added (by Eric McDonald)

- bug fix: litesql-gen produced broken table names when using longer name than 31 characters
- bug fix: litesql-gen produced broken SQL (duplicated relation attribute fields in CREATE TABLE - statements)
- RPM packaging headers (by Eric McDonald)
- added .cvsignore - files (by Eric McDonald)
- versioning and packaging improvements (by Eric McDonald)
- litesql-gen : internal restructuring
\section ver0_3_1 Version 0.3.1
- namespace - attribute is required now on (used in litesql-gen)
- relation field type names are now consistent with object field type names (they start with uppercase letter) 
- bug fix: litesql-gen rejected relations with two or more objects with no relation handles (duplicate handle)
- better tests for backend databases to configure.ac (by Eric McDonald) 
\section ver0_3_0 Version 0.3.0
- anonymous enums removed from enumerated field values (in generated code), compiles now with g++-4.0
- Relation::Row-class added, represents rows of relation table
- Relation::getRows-method added, used to access relation rows
- concurrency problem with SQLite3-backend.execute fixed
- few VC++ - compilation issues fixed (by Axel Schmidt)
- Python code generator replaced with C++ - code generator (litesql-gen)